# IDEA

./: .gitignore  INSTALL.md  README.md  pyproject.toml  session-protocol.md
examples/: codex-mcp-config.toml
plugin_overlay/: ida_mcp.py  idea_ida.py
plugin_overlay/ida_mcp/: __init__.py  api_modify.py  headless_bootstrap.py  runtime.py  session_bridge.py  sync.py  utils.py
plugin_overlay/ida_mcp/zeromcp/: mcp.py
plugin_overlay/idea_ida_backend/: __init__.py  bridge.py  runtime.py  server.py  sync.py  tools.py
scripts/: install_codex_config.py  install_plugin.ps1  install_wsl.sh  regression_stdio.py  run_manager.sh  smoke_test_headless.sh  smoke_test_stdio.py
src/ida_hybrid_manager/: __init__.py  backend.py  launch.py  manager_api.py  models.py  networking.py  pathing.py  registry.py  server.py
