[project]
name = "ida-hybrid-manager"
version = "0.1.0"
description = "Hybrid IDA session manager for GUI-attached and manager-owned sessions"
requires-python = ">=3.12"
dependencies = [
  "mcp",
]

[project.scripts]
ida-hybrid-manager = "ida_hybrid_manager.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
